<resources>
    <string name="app_name">BTL_MXH</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="sign_in">LOG IN</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="password_again">Password (again)</string>
    <string name="gender">Gender</string>
    <string name="recover_you_password_if_you_have_forgot_the_password">Recover you password if you have forgot the password!</string>
    <string name="submit">SUBMIT</string>
    <string name="ex_abc_gmail_com">Ex: abc@gmail.com</string>
    <string name="create">CREATE</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="phone">Phone</string>
    <string name="next">NEXT</string>
    <string name="log_in">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_only_live_one">You only live one!</string>
    <string name="edit_profile_information">Edit profile information</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="update">UPDATE</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password (again)</string>
    <string name="system_and_services_update">System and services update</string>
    <string name="app_updates">App updates</string>
    <string name="vibrate">Vibrate</string>
    <string name="general_notification">General Notification</string>
    <string name="common">Common</string>
    <string name="what_are_you_thinking">What are you thinking?</string>
    <string name="love">Love</string>
    <string name="comment">Comment</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to log out?</string>
    <string name="cancle">Cancle</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="save_post">Save Post</string>
    <string name="add">Add</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="birthday">Birthday</string>
    <string name="mimi_just_added_3_new_photos_to_her_diary">MiMi just added 3 new photos to her diary</string>
    <string name="timkiem">Tìm Kiếm</string>
    <string name="m_t_kh_u_kh_ng_c_k_t_c_bi_t_v_l_n_h_n_8_k_t">Mật khẩu không có ký tự đặc biệt và lớn hơn 8 ký tự !</string>
    <string name="m_t_kh_u_kh_ng_kh_p">Mật khẩu không khớp !</string>
    <string name="enter_mess">Enter message...</string>
    <string name="text_show_toast">Lỗi</string>
    <string name="we_have_just_sent_you_a_new_password_please_check_your_email">We have just sent you a new password, please check your email!!!</string>
    <string name="hoa_what_are_you_thinking">You, what are you thinking?</string>
    <string name="save_post">save_post</string>
    <string name="hit_circle">HIT Circle</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
</resources>