<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp"
    android:background="@drawable/borderctlo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/imv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/hit" />
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaasemibold"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaamedium"
                android:text="@string/user_name"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_settings_24" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/border_follower"
                android:text="@string/follower"
                android:textAllCaps="false"
                android:fontFamily="@font/comfortaasemibold"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="13sp"
                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/border_follower"
                android:text="@string/following"
                android:textAllCaps="false"
                android:fontFamily="@font/comfortaasemibold"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="13sp"
                />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/comfortaaregular"
        android:text="@string/you_only_live_one"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>