<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changepassword.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgr">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/image_change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout11"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout11"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout11"
            app:passwordToggleEnabled="true">

            <com.example.btl_mxh.ui.notificationsetting.base.BaseTextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_again"
                android:fontFamily="@font/comfortaaregular"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout11"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10"
            app:passwordToggleEnabled="true">

            <com.example.btl_mxh.ui.notificationsetting.base.BaseTextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:fontFamily="@font/comfortaaregular"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout10"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:passwordToggleEnabled="true">

            <com.example.btl_mxh.ui.notificationsetting.base.BaseTextInputEditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:fontFamily="@font/comfortaaregular"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/borderappcombatbutton"
            android:backgroundTint="@color/orange"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:fontFamily="@font/nunito_extrabold"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>